test-data/unit/check-typelevel-basic.test
[case testTypeOperatorIsAssignable]
from typing import IsAssignable

# Ternary syntax should be converted to _Cond[condition, true_type, false_type]
x: IsAssignable[int, object]
reveal_type(x)  # N: Revealed type is "Literal[True]"

y: IsAssignable[int, str]
reveal_type(y)  # N: Revealed type is "Literal[False]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorIsEquivalent]
from typing import IsEquivalent, Literal

# IsEquivalent checks type equivalence (both directions of subtype)
x1: IsEquivalent[int, int]
reveal_type(x1)  # N: Revealed type is "Literal[True]"

x2: IsEquivalent[int, object]
reveal_type(x2)  # N: Revealed type is "Literal[False]"

x3: IsEquivalent[Literal[1], Literal[1]]
reveal_type(x3)  # N: Revealed type is "Literal[True]"

x4: IsEquivalent[Literal[1], int]
reveal_type(x4)  # N: Revealed type is "Literal[False]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorBool]
# flags: --python-version 3.10
from typing import Bool, Literal, IsAssignable, Union

# Bool checks if type contains Literal[True]
x1: Bool[Literal[True]]
reveal_type(x1)  # N: Revealed type is "Literal[True]"

x2: Bool[Literal[False]]
reveal_type(x2)  # N: Revealed type is "Literal[False]"

x3: Bool[Union[Literal[True], Literal[False]]]
reveal_type(x3)  # N: Revealed type is "Literal[True]"

x4: Bool[bool]
reveal_type(x4)  # N: Revealed type is "Literal[True]"

# Using Bool to check result of IsAssignable
x5: Bool[IsAssignable[int, object]]
reveal_type(x5)  # N: Revealed type is "Literal[True]"

x6: Bool[IsAssignable[int, str]]
reveal_type(x6)  # N: Revealed type is "Literal[False]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorAnd]
from typing import IsAssignable, Literal

# _And is the internal representation for `and` in type booleans
# We test it directly via IsAssignable compositions

# True and True = True
x1: Literal[True] if IsAssignable[int, object] and IsAssignable[str, object] else Literal[False]
reveal_type(x1)  # N: Revealed type is "Literal[True]"

# True and False = False
x2: Literal[True] if IsAssignable[int, object] and IsAssignable[int, str] else Literal[False]
reveal_type(x2)  # N: Revealed type is "Literal[False]"

# False and True = False (short-circuit)
x3: Literal[True] if IsAssignable[int, str] and IsAssignable[str, object] else Literal[False]
reveal_type(x3)  # N: Revealed type is "Literal[False]"

# False and False = False
x4: Literal[True] if IsAssignable[int, str] and IsAssignable[str, int] else Literal[False]
reveal_type(x4)  # N: Revealed type is "Literal[False]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorOr]
from typing import IsAssignable, Literal

# _Or is the internal representation for `or` in type booleans

# True or True = True
x1: Literal[True] if IsAssignable[int, object] or IsAssignable[str, object] else Literal[False]
reveal_type(x1)  # N: Revealed type is "Literal[True]"

# True or False = True (short-circuit)
x2: Literal[True] if IsAssignable[int, object] or IsAssignable[int, str] else Literal[False]
reveal_type(x2)  # N: Revealed type is "Literal[True]"

# False or True = True
x3: Literal[True] if IsAssignable[int, str] or IsAssignable[str, object] else Literal[False]
reveal_type(x3)  # N: Revealed type is "Literal[True]"

# False or False = False
x4: Literal[True] if IsAssignable[int, str] or IsAssignable[str, int] else Literal[False]
reveal_type(x4)  # N: Revealed type is "Literal[False]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorNot]
from typing import IsAssignable, Literal

# _Not is the internal representation for `not` in type booleans

# not True = False
x1: Literal[True] if not IsAssignable[int, object] else Literal[False]
reveal_type(x1)  # N: Revealed type is "Literal[False]"

# not False = True
x2: Literal[True] if not IsAssignable[int, str] else Literal[False]
reveal_type(x2)  # N: Revealed type is "Literal[True]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorBoolCombinations]
from typing import IsAssignable, Literal

# Test combinations of and, or, not

# not (True and False) = True
x1: Literal[True] if not (IsAssignable[int, object] and IsAssignable[int, str]) else Literal[False]
reveal_type(x1)  # N: Revealed type is "Literal[True]"

# (True or False) and True = True
x2: Literal[True] if (IsAssignable[int, object] or IsAssignable[int, str]) and IsAssignable[str, object] else Literal[False]
reveal_type(x2)  # N: Revealed type is "Literal[True]"

# not False or False = True
x3: Literal[True] if not IsAssignable[int, str] or IsAssignable[str, int] else Literal[False]
reveal_type(x3)  # N: Revealed type is "Literal[True]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorTernarySyntax]
from typing import IsAssignable

# Ternary syntax should be converted to _Cond[condition, true_type, false_type]
x: str if IsAssignable[int, object] else int

x = 0  # E: Incompatible types in assignment (expression has type "int", variable has type "str")

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorInGenericClass]
# Test type operators in generic class context
from typing import Generic, TypeVar, IsAssignable

T = TypeVar('T')

class MyClass(Generic[T]):
    attr: str if IsAssignable[T, int] else float

    def method(self, x: list[T] if IsAssignable[T, str] else T) -> None:
        pass

x: MyClass[int]
reveal_type(x.attr)  # N: Revealed type is "builtins.str"
x.method(0)
x.method([0])  # E: Argument 1 to "method" of "MyClass" has incompatible type "list[int]"; expected "int"

y: MyClass[object]
reveal_type(y.attr)  # N: Revealed type is "builtins.float"
y.method(0)
y.method([0])

z: MyClass[str]
reveal_type(z.attr)  # N: Revealed type is "builtins.float"
z.method('0')  # E: Argument 1 to "method" of "MyClass" has incompatible type "str"; expected "list[str]"
z.method(['0'])


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorNestedTernary]
# Test nested ternary expressions
from typing import IsAssignable

# Nested ternary should work
z: int if IsAssignable[int, str] else (float if IsAssignable[float, object] else str)
z = 'xxx'  # E: Incompatible types in assignment (expression has type "str", variable has type "float")

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorMultipleTypeArgs]
# Test type operators with various argument types
from typing import Generic, TypeVar, IsAssignable

T = TypeVar('T')
U = TypeVar('U')

class Container(Generic[T, U]):
    # Complex conditional with multiple type variables
    value: list[U] if IsAssignable[T, int] else tuple[T, U]

x: Container[int, bool]
reveal_type(x.value)  # N: Revealed type is "builtins.list[builtins.bool]"

y: Container[str, bool]
reveal_type(y.value)  # N: Revealed type is "tuple[builtins.str, builtins.bool]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall0]
# Test type operators in function signatures
from typing import TypeVar, IsAssignable

T = TypeVar('T')

# XXX: resolving this seems basically impossible!!
def process(
    x: bytes if IsAssignable[T, str] else T,
    y: str if IsAssignable[T, int] else float
) -> int if IsAssignable[T, list[object]] else str:
    ...

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall1]
# flags: --python-version 3.14
# Test type operators in function signatures
from typing import IsAssignable

def process[T](x: T) -> IsAssignable[T, str]:
    ...

reveal_type(process(0))  # N: Revealed type is "Literal[False]"
reveal_type(process('test'))  # N: Revealed type is "Literal[True]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall2]
# flags: --python-version 3.14

# Test a type operator in an *argument*, but one that should be resolvable
# No sweat!!
from typing import Callable, IsAssignable, Literal

def process[T](x: T, y: IsAssignable[T, str]) -> None:
    ...

process(0, False)
process(0, True)  # E: Argument 2 to "process" has incompatible type "Literal[True]"; expected "Literal[False]"
process('test', False)  # E: Argument 2 to "process" has incompatible type "Literal[False]"; expected "Literal[True]"
process('test', True)

x0: Callable[[int, Literal[False]], None] = process
x1: Callable[[int, Literal[True]], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[T, typing.IsAssignable[T, str]], None]", variable has type "Callable[[int, Literal[True]], None]")
x2: Callable[[str, Literal[False]], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[T, typing.IsAssignable[T, str]], None]", variable has type "Callable[[str, Literal[False]], None]")
x3: Callable[[str, Literal[True]], None] = process


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall3]
# flags: --python-version 3.14

# Test a type operator in an *argument*, but one that should be resolvable
# No sweat!!
from typing import Callable, IsAssignable, Literal

def process[T](x: IsAssignable[T, str], y: T) -> None:
    ...

process(False, 0)
process(True, 0)  # E: Argument 1 to "process" has incompatible type "Literal[True]"; expected "Literal[False]"
process(False, 'test')  # E: Argument 1 to "process" has incompatible type "Literal[False]"; expected "Literal[True]"
process(True, 'test')

x0: Callable[[Literal[False], int], None] = process
x1: Callable[[Literal[True], int], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[typing.IsAssignable[T, str], T], None]", variable has type "Callable[[Literal[True], int], None]")
x2: Callable[[Literal[False], str], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[typing.IsAssignable[T, str], T], None]", variable has type "Callable[[Literal[False], str], None]")
x3: Callable[[Literal[True], str], None] = process

reveal_type(process)  # N: Revealed type is "def [T] (x: typing.IsAssignable[T`-1, builtins.str], y: T`-1)"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorInTypeAlias]
# flags: --python-version 3.14
# Test type operators in type aliases (using concrete types to avoid unbound typevar issues)
from typing import IsAssignable

# Type alias using _Cond with concrete types
type ConditionalType = str if IsAssignable[int, object] else bytes
z: ConditionalType = b'lol'  # E: Incompatible types in assignment (expression has type "bytes", variable has type "str")


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGenericTypeAlias]
# flags: --python-version 3.14
# Test generic type alias with conditional type
from typing import IsAssignable

type IntOptional[T] = T | None if IsAssignable[T, int] else T

x0: IntOptional[int]
reveal_type(x0)  # N: Revealed type is "builtins.int | None"

x1: IntOptional[str]
reveal_type(x1)  # N: Revealed type is "builtins.str"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorFromUnion]
# flags: --python-version 3.10
# Test FromUnion operator
from typing import FromUnion

x: FromUnion[int | str | float]
reveal_type(x)  # N: Revealed type is "tuple[builtins.int, builtins.str, builtins.float]"

# Non-union becomes 1-tuple
y: FromUnion[int]
reveal_type(y)  # N: Revealed type is "tuple[builtins.int]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorNewUnion]
# flags: --python-version 3.10
# Test _NewUnion operator
from typing import _NewUnion

# Basic union construction
x: _NewUnion[int, str, float]
reveal_type(x)  # N: Revealed type is "builtins.int | builtins.str | builtins.float"

# Single type stays as-is
y: _NewUnion[int]
reveal_type(y)  # N: Revealed type is "builtins.int"

# Nested unions get flattened (note: bool is subtype of int so it gets simplified away)
z: _NewUnion[int, str | bytes]
reveal_type(z)  # N: Revealed type is "builtins.int | builtins.str | builtins.bytes"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorToUnion]
# flags: --python-version 3.10
# Test FromUnion operator
from typing import Union, Iter, Bool, Literal

a: Union[*[x for x in Iter[tuple[int, str]]]]
reveal_type(a)  # N: Revealed type is "builtins.int | builtins.str"

b: Union[*[x for x in Iter[tuple[int, str]] if Bool[Literal[False]]]]
reveal_type(b)  # N: Revealed type is "Never"

c: Union[*tuple[int, str]]
reveal_type(c)  # N: Revealed type is "builtins.int | builtins.str"

d: Union[*tuple[()]]
reveal_type(d)  # N: Revealed type is "Never"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorNewUnionWithComprehension]
# flags: --python-version 3.10
# Test _NewUnion with comprehension
from typing import _NewUnion, Iter, Attrs, GetType

class Foo:
    a: int
    b: str
    c: bytes

# Build union of all attribute types
AttrTypes = _NewUnion[*[GetType[m] for m in Iter[Attrs[Foo]]]]
x: AttrTypes
reveal_type(x)  # N: Revealed type is "builtins.int | builtins.str | builtins.bytes"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorStringConcat]
# flags: --python-version 3.10
# Test string concatenation operator
from typing import Concat, Literal

x: Concat[Literal["hello"], Literal["world"]]
reveal_type(x)  # N: Revealed type is "Literal['helloworld']"

y: Concat[Literal['a'] | Literal['b'], Literal['c'] | Literal['d']]
reveal_type(y)  # N: Revealed type is "Literal['ac'] | Literal['ad'] | Literal['bc'] | Literal['bd']"

z: Concat[Literal['a', 'b'], Literal['c', 'd']]
reveal_type(z)  # N: Revealed type is "Literal['ac'] | Literal['ad'] | Literal['bc'] | Literal['bd']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorStringUppercase]
# Test string case operators
from typing import Uppercase, Lowercase, Capitalize, Uncapitalize, Literal

x1: Uppercase[Literal["hello"]]
reveal_type(x1)  # N: Revealed type is "Literal['HELLO']"

x2: Lowercase[Literal["HELLO"]]
reveal_type(x2)  # N: Revealed type is "Literal['hello']"

x3: Capitalize[Literal["hello"]]
reveal_type(x3)  # N: Revealed type is "Literal['Hello']"

x4: Uncapitalize[Literal["HELLO"]]
reveal_type(x4)  # N: Revealed type is "Literal['hELLO']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorStringSlice]
# Test string slice operator
from typing import Slice, Literal

x1: Slice[Literal["hello"], Literal[1], Literal[4]]
reveal_type(x1)  # N: Revealed type is "Literal['ell']"

x2: Slice[Literal["hello"], Literal[0], Literal[2]]
reveal_type(x2)  # N: Revealed type is "Literal['he']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorTupleSlice]
# Test tuple slice operator
from typing import Slice, Literal

x1: Slice[tuple[int, str, float, bool], Literal[1], Literal[3]]
reveal_type(x1)  # N: Revealed type is "tuple[builtins.str, builtins.float]"

x2: Slice[tuple[int, str, float], Literal[0], Literal[2]]
reveal_type(x2)  # N: Revealed type is "tuple[builtins.int, builtins.str]"

# Slice from start
x3: Slice[tuple[int, str, float], None, Literal[2]]
reveal_type(x3)  # N: Revealed type is "tuple[builtins.int, builtins.str]"

# Slice to end
x4: Slice[tuple[int, str, float], Literal[1], None]
reveal_type(x4)  # N: Revealed type is "tuple[builtins.str, builtins.float]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorLength]
# Test Length operator
from typing import Length, Literal, Iter, Tuple

x: Length[tuple[int, str, float]]
reveal_type(x)  # N: Revealed type is "Literal[3]"

y: Length[tuple[int]]
reveal_type(y)  # N: Revealed type is "Literal[1]"

z: Length[tuple[()]]
reveal_type(z)  # N: Revealed type is "Literal[0]"

w: Length[tuple[int, ...]]
reveal_type(w)  # N: Revealed type is "None"

a: Length[tuple[*[x for x in Iter[tuple[int, str, bool]]]]]
reveal_type(a)  # N: Revealed type is "Literal[3]"

b: Length[tuple[str, *tuple[int, ...]]]
reveal_type(b)  # N: Revealed type is "None"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArg1]
# Test GetArg operator
from typing import Generic, TypeVar, GetArg, Literal

T = TypeVar('T')
U = TypeVar('U')

class MyGeneric(Generic[T, U]):
    pass

# Get first type arg
x: GetArg[MyGeneric[int, str], MyGeneric, Literal[0]]
reveal_type(x)  # N: Revealed type is "builtins.int"

# Get second type arg
y: GetArg[MyGeneric[int, str], MyGeneric, Literal[1]]
reveal_type(y)  # N: Revealed type is "builtins.str"

# Works with list
z: GetArg[list[float], list, Literal[0]]
reveal_type(z)  # N: Revealed type is "builtins.float"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArg2]
# Test GetArg operator
from typing import Generic, TypeVar, GetArg, Literal

T = TypeVar('T')
U = TypeVar('U')

class MyGeneric(Generic[T, U]):
    pass

class Concrete(MyGeneric[int, str]):
    pass

# Get first type arg
x: GetArg[Concrete, MyGeneric, Literal[0]]
reveal_type(x)  # N: Revealed type is "builtins.int"

# Get second type arg
y: GetArg[Concrete, MyGeneric, Literal[1]]
reveal_type(y)  # N: Revealed type is "builtins.str"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArg3]
# Test GetArg operator
from typing import Generic, TypeVar, GetArg, GetArgs, Literal

T = TypeVar('T')
U = TypeVar('U')

class MyGeneric(Generic[T, U]):
    pass

class MyGeneric2(MyGeneric[T, str]):
    pass

class Concrete(MyGeneric2[int]):
    pass

# Get first type arg
x: GetArg[Concrete, MyGeneric, Literal[0]]
reveal_type(x)  # N: Revealed type is "builtins.int"

# Get second type arg
y: GetArg[Concrete, MyGeneric, Literal[1]]
reveal_type(y)  # N: Revealed type is "builtins.str"

args: GetArgs[Concrete, MyGeneric]
reveal_type(args)  # N: Revealed type is "tuple[builtins.int, builtins.str]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArg4]
# flags: --python-version 3.14

# Test GetArg on tuple types
from typing import GetArg, Iterable, Literal, Sequence, IsAssignable, TypedDict, Protocol

x0: GetArg[tuple[int, str, float], Iterable, Literal[0]]
reveal_type(x0)  # N: Revealed type is "builtins.int | builtins.str | builtins.float"

x1: GetArg[list[int], Iterable, Literal[0]]
reveal_type(x1)  # N: Revealed type is "builtins.int"

x2: GetArg[list[int], Sequence, Literal[0]]
reveal_type(x2)  # N: Revealed type is "builtins.int"

x3: GetArg[dict[str, bool], Iterable, Literal[0]]
reveal_type(x3)  # N: Revealed type is "builtins.str"

class D(TypedDict):
    x: int
    y: str

x4: GetArg[D, Iterable, Literal[0]]
reveal_type(x4)  # N: Revealed type is "builtins.str"

x5: GetArg[type[bool], type, Literal[0]]
reveal_type(x5)  # N: Revealed type is "builtins.bool"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArgNegativeIndex]
# Test GetArg with negative indexes
from typing import Generic, TypeVar, GetArg, Literal

T = TypeVar('T')
U = TypeVar('U')
V = TypeVar('V')

class MyGeneric(Generic[T, U, V]):
    pass

# Negative indexes count from the end
x: GetArg[MyGeneric[int, str, float], MyGeneric, Literal[-1]]
reveal_type(x)  # N: Revealed type is "builtins.float"

y: GetArg[MyGeneric[int, str, float], MyGeneric, Literal[-2]]
reveal_type(y)  # N: Revealed type is "builtins.str"

z: GetArg[MyGeneric[int, str, float], MyGeneric, Literal[-3]]
reveal_type(z)  # N: Revealed type is "builtins.int"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArgTuple]
# Test GetArg on tuple types
from typing import GetArg, Literal

# GetArg on tuple with tuple base
x0: GetArg[tuple[int, str, float], tuple, Literal[0]]
reveal_type(x0)  # N: Revealed type is "builtins.int"

x1: GetArg[tuple[int, str, float], tuple, Literal[1]]
reveal_type(x1)  # N: Revealed type is "builtins.str"

x2: GetArg[tuple[int, str, float], tuple, Literal[2]]
reveal_type(x2)  # N: Revealed type is "builtins.float"

# Negative indexes on tuples
y: GetArg[tuple[int, str, float], tuple, Literal[-1]]
reveal_type(y)  # N: Revealed type is "builtins.float"

z: GetArg[tuple[int, str, float], tuple, Literal[-2]]
reveal_type(z)  # N: Revealed type is "builtins.str"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArgOutOfBounds]
# Test GetArg with out-of-bounds indexes returns Never
from typing import Generic, TypeVar, GetArg, Literal

T = TypeVar('T')
U = TypeVar('U')

class MyGeneric(Generic[T, U]):
    pass

# Index too large
x: GetArg[MyGeneric[int, str], MyGeneric, Literal[2]]
reveal_type(x)  # N: Revealed type is "Never"

x2: GetArg[MyGeneric[int, str], MyGeneric, Literal[100]]
reveal_type(x2)  # N: Revealed type is "Never"

# Negative index too small
y: GetArg[MyGeneric[int, str], MyGeneric, Literal[-3]]
reveal_type(y)  # N: Revealed type is "Never"

y2: GetArg[MyGeneric[int, str], MyGeneric, Literal[-100]]
reveal_type(y2)  # N: Revealed type is "Never"

# Out of bounds on tuples
z: GetArg[tuple[int, str], tuple, Literal[2]]
reveal_type(z)  # N: Revealed type is "Never"

z2: GetArg[tuple[int, str], tuple, Literal[-3]]
reveal_type(z2)  # N: Revealed type is "Never"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionBasicTy]
# flags: --python-version 3.14
# Test basic type comprehension
from typing import IsAssignable, Iter

class A[*T]:
    pass

# Basic comprehension - maps over tuple elements
def f(x: A[*[T for T in Iter[tuple[int, str, float]]]]) -> None:
    pass

reveal_type(f)  # N: Revealed type is "def (x: __main__.A[builtins.int, builtins.str, builtins.float])"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionBasic]
# Test basic type comprehension
from typing import IsAssignable, Iter

# Basic comprehension - maps over tuple elements
def f(x: tuple[*[T for T in Iter[tuple[int, str, float]]]]) -> None:
    pass

reveal_type(f)  # N: Revealed type is "def (x: tuple[builtins.int, builtins.str, builtins.float])"

z: tuple[*[T for T in Iter[tuple[()]]]]
reveal_type(z)  # N: Revealed type is "tuple[()]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionWithCondition]
# Test type comprehension with filtering condition
from typing import IsAssignable, Iter

# Filter elements - only keep subtypes of int (int, bool)
def f(x: tuple[*[T for T in Iter[tuple[int, str, bool, float]] if IsAssignable[T, int]]]) -> None:
    pass

reveal_type(f)  # N: Revealed type is "def (x: tuple[builtins.int, builtins.bool])"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionTransform]
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# Transform elements
x: tuple[*[Uppercase[T] for T in Iter[tuple[Literal["a"], Literal["b"], Literal["c"]]]]]
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeComprehensionAlias1]
# flags: --python-version 3.14
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# Transform elements
type A = tuple[*[Uppercase[T] for T in Iter[tuple[Literal["a"], Literal["b"], Literal["c"]]]]]
x: A
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionAlias2]
# flags: --python-version 3.14
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# Transform elements
type Trans[U] = tuple[*[Uppercase[T] for T in Iter[U]]]
x: Trans[tuple[Literal["a"], Literal["b"], Literal["c"]]]
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionAlias3]
# flags: --python-version 3.14
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# XXX: DECISION: Should shadowing be allowed?

# Transform elements
type Trans[T] = tuple[*[Uppercase[T] for T in Iter[T]]]  # E: "T" already defined as a type parameter
x: Trans[tuple[Literal["a"], Literal["b"], Literal["c"]]]
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorSubType0]
# flags: --python-version 3.14

from typing import IsAssignable

def process[T](x: IsAssignable[T, str], y: IsAssignable[T, int]) -> None:
    x = y  # E: Incompatible types in assignment (expression has type "typing.IsAssignable[T, int]", variable has type "typing.IsAssignable[T, str]")


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorSubType1]
# flags: --python-version 3.14

from typing import Callable, IsAssignable, Literal

class A:
    def process[T](self, x: IsAssignable[T, str], y: T) -> None:
        ...


class B(A):
    pass


class C(A):
    def process[T](self, x: IsAssignable[T, str], y: T) -> None:
        ...

class D(A):
    def process[T](self, x: IsAssignable[T, int], y: T) -> None:  # E: Argument 1 of "process" is incompatible with supertype "A"; supertype defines the argument type as "typing.IsAssignable[T, str]" \
                                                           # N: This violates the Liskov substitution principle \
                                                           # N: See https://mypy.readthedocs.io/en/stable/common_issues.html#incompatible-overrides
        ...


class E(A):
    def process[T](self, x: str, y: T) -> None:  # E: Argument 1 of "process" is incompatible with supertype "A"; supertype defines the argument type as "typing.IsAssignable[T, str]" \
                                                 # N: This violates the Liskov substitution principle \
                                                 # N: See https://mypy.readthedocs.io/en/stable/common_issues.html#incompatible-overrides
        ...


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorSubType2]
# flags: --python-version 3.14

from typing import Callable, IsAssignable, Literal

class A:
    def process[T](self, y: T) -> IsAssignable[T, str]:
        ...


class B(A):
    pass


class C(A):
    def process[T](self, y: T) -> IsAssignable[T, str]:
        ...


class D(A):
    def process[T](self, y: T) -> IsAssignable[T, int]:  # E: Return type "typing.IsAssignable[T, int]" of "process" incompatible with return type "typing.IsAssignable[T, str]" in supertype "A"
        ...


class E(A):
    def process[T](self, y: T) -> str:  # E: Return type "str" of "process" incompatible with return type "typing.IsAssignable[T, str]" in supertype "A"
        ...


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorSubType3]
# flags: --python-version 3.14

from typing import Callable, IsAssignable, Literal, Iter

class A:
    def process[Ts](self, x: Ts) -> tuple[*[t for t in Iter[Ts]]]:
        ...


class B(A):
    pass


# alpha varying
class C(A):
    def process[Us](self, x: Us) -> tuple[*[s for s in Iter[Us]]]:
        ...


class D(A):
    def process[Ts](self, x: Ts) -> tuple[*[int for s in Iter[Ts]]]:  # E: Signature of "process" incompatible with supertype "A" \
                                                                      # N:      Superclass: \
                                                                      # N:          def [Ts] process(self, x: Ts) -> tuple[*[t for t in typing.Iter[Ts]]] \
                                                                      # N:      Subclass: \
                                                                      # N:          def [Ts] process(self, x: Ts) -> tuple[*[int for s in typing.Iter[Ts]]]
        ...

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorJoin1]
# flags: --python-version 3.14

from typing import Callable, IsAssignable


def f0[T](x: IsAssignable[T, str], y: IsAssignable[T, str]) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[typing.IsAssignable[T`-1, builtins.str]]"

def f1[T](x: IsAssignable[T, str], y: IsAssignable[T, str] | None) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[typing.IsAssignable[T`-1, builtins.str] | None]"

def g[T](x: IsAssignable[T, str], y: IsAssignable[T, int]) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[builtins.object]"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorMeet1]
# flags: --python-version 3.14

from typing import Callable, IsAssignable

def g[T](
    x: Callable[[IsAssignable[T, str]], None],
    x0: Callable[[IsAssignable[T, str]], None],
    y: Callable[[IsAssignable[T, int]], None],
) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[builtins.function]"

    w = [x, x0]
    reveal_type(w)  # N: Revealed type is "builtins.list[def (typing.IsAssignable[T`-1, builtins.str])]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorTypedDictParam]
# flags: --python-version 3.14

from typing import BaseTypedDict, Callable, Attrs, GetName, TypedDict, Iter

def foo[T: BaseTypedDict](x: T) -> tuple[
    *[GetName[m] for m in Iter[Attrs[T]]]
]:
    return tuple(x.keys())  # type: ignore


class Sigh(TypedDict):
    x: int
    y: str


td: Sigh = {'x': 10, 'y': 'hmmm'}
x = foo(td)
reveal_type(x)  # N: Revealed type is "tuple[Literal['x'], Literal['y']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorRaiseError]
# flags: --python-version 3.14

from typing import RaiseError, Literal

x: RaiseError[Literal['custom error message']]  # E: custom error message
reveal_type(x)  # N: Revealed type is "Never"

y: RaiseError[Literal['custom error message'], str]  # E: custom error message: str

type Alias[T] = RaiseError[Literal['wrong'], T]

z: Alias[bool]  # E: wrong: bool

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorRaiseErrorInConditional]
from typing import RaiseError, IsAssignable, Literal

# RaiseError in a conditional - error only if condition triggers it
T = int
x: str if IsAssignable[T, str] else RaiseError[Literal['T must be a str']]  # E: T must be a str
reveal_type(x)  # N: Revealed type is "Never"

y: str if IsAssignable[T, int] else RaiseError[Literal['T must be a int']]
reveal_type(y)  # N: Revealed type is "builtins.str"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorConditionalArg1]
# flags: --python-version 3.14

from typing import IsAssignable

def foo[T](x: T, y: list[T] if IsAssignable[T, int] else T) -> T:
    return x


foo(0, 0)  # E: Argument 2 to "foo" has incompatible type "int"; expected "list[int]"
foo(0, [0])
foo('a', 'a')
foo('a', ['a'])  # E: Argument 2 to "foo" has incompatible type "list[str]"; expected "str"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorConditionalArg2]
# flags: --python-version 3.14

from typing import IsAssignable

def foo[T](y: list[T] if IsAssignable[T, int] else T, x: T) -> T:
    return x


foo(0, 0)  # E: Argument 1 to "foo" has incompatible type "int"; expected "list[int]"
foo([0], 0)
foo('a', 'a')
foo(['a'], 'a')  # E: Argument 1 to "foo" has incompatible type "list[str]"; expected "str"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorNewProtocolBasic]
# flags: --python-version 3.14

from typing import NewProtocol, Member, Literal

# Basic NewProtocol creation
type MyProto = NewProtocol[
    Member[Literal["x"], int],
    Member[Literal["y"], str],
]

# Check the protocol works with structural subtyping
class Good:
    x: int
    y: str

class Bad:
    x: int
    # Missing y

def takes_proto(p: MyProto) -> None:
    pass

g: Good
takes_proto(g)

b: Bad
takes_proto(b)  # E: Argument 1 to "takes_proto" has incompatible type "Bad"; expected "NewProtocol[x: int, y: str]" \
                # N: "Bad" is missing following "NewProtocol" protocol member: \
                # N:     y



[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorNewProtocolIncompatible]
# flags: --python-version 3.14

from typing import NewProtocol, Member, Literal

a0: NewProtocol[
    Member[Literal["foo"], str],
]
b0: NewProtocol[
    Member[Literal["bar"], int],
]
a0 = b0  # E: Incompatible types in assignment (expression has type "NewProtocol[bar: int]", variable has type "NewProtocol[foo: str]")

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorNewProtocolRecursive1]
# flags: --python-version 3.14

from typing import NewProtocol, Member, Literal

# Basic NewProtocol creation
type LinkedList = NewProtocol[
    Member[Literal["data"], int],
    Member[Literal["next"], LinkedList],
]

z: LinkedList
reveal_type(z)  # N: Revealed type is "NewProtocol[data: builtins.int, next: ...]"

reveal_type(z.data)  # N: Revealed type is "builtins.int"
reveal_type(z.next.next.data)  # N: Revealed type is "builtins.int"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorNewProtocolRecursive2]
# flags: --python-version 3.14

from typing import NewProtocol, Member, Literal

# Basic NewProtocol creation
type LinkedList[T] = NewProtocol[
    Member[Literal["data"], T],
    Member[Literal["next"], LinkedList[T]],
]

z: LinkedList[str]
reveal_type(z)  # N: Revealed type is "NewProtocol[data: builtins.str, next: ...]"

reveal_type(z.data)  # N: Revealed type is "builtins.str"
reveal_type(z.next.next.data)  # N: Revealed type is "builtins.str"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorNewTypedDictRecursive]
# flags: --python-version 3.14

from typing import NewTypedDict, Member, Literal

# Basic NewProtocol creation
type LinkedList = NewTypedDict[
    Member[Literal["data"], int],
    Member[Literal["next"], LinkedList],
]

z: LinkedList
reveal_type(z)  # N: Revealed type is "TypedDict({'data': builtins.int, 'next': ...})"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorNewProtocolReturn]
# flags: --python-version 3.14

from typing import NewProtocol, Member, Literal


def foo[T, U](x: T, y: U) -> NewProtocol[
    Member[Literal["x"], T],
    Member[Literal["y"], U],
]:
    raise BaseException


res1 = foo('lol', 10)
reveal_type(res1.x)  # N: Revealed type is "builtins.str"
reveal_type(res1.y)  # N: Revealed type is "builtins.int"

res2 = foo(['foo', 'bar'], None)
reveal_type(res2.x)  # N: Revealed type is "builtins.list[builtins.str]"
reveal_type(res2.y)  # N: Revealed type is "None"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorNewProtocolSubtyping]
# flags: --python-version 3.14

from typing import NewProtocol, Member, Literal

# Create a protocol with two members
type Point = NewProtocol[
    Member[Literal["x"], int],
    Member[Literal["y"], int],
]

# Any class with x: int and y: int should satisfy Point
class Point2D:
    x: int
    y: int

class Point3D:
    x: int
    y: int
    z: int

class NotAPoint:
    a: int
    b: int

def draw(p: Point) -> None:
    pass

p2d: Point2D
p3d: Point3D
nap: NotAPoint

draw(p2d)  # OK - has x and y
draw(p3d)  # OK - has x and y (plus z is fine)
draw(nap)  # E: Argument 1 to "draw" has incompatible type "NotAPoint"; expected "NewProtocol[x: int, y: int]"



[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testNewCallableBasic]
from typing import Callable, Param, Params, Literal

# Basic callable with positional args
f1: Callable[Params[Param[Literal["a"], int], Param[Literal["b"], str]], bool]
reveal_type(f1)  # N: Revealed type is "def (a: builtins.int, b: builtins.str) -> builtins.bool"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testNewCallableWithKwargs]
from typing import Callable, Param, Params, Literal

# Callable with keyword-only args
f: Callable[Params[
    Param[Literal["a"], int],
    Param[Literal["b"], str, Literal["keyword"]],
], bool]
reveal_type(f)  # N: Revealed type is "def (a: builtins.int, *, b: builtins.str) -> builtins.bool"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testNewCallableWithDefaults]
from typing import Callable, Param, Params, Literal

# Callable with default args
f: Callable[Params[
    Param[Literal["a"], int],
    Param[Literal["b"], str, Literal["default"]],
], bool]
reveal_type(f)  # N: Revealed type is "def (a: builtins.int, b: builtins.str =) -> builtins.bool"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testNewCallableWithStarArgs]
from typing import Callable, Param, Params, Literal

# Callable with *args and **kwargs
f: Callable[Params[
    Param[Literal["a"], int],
    Param[None, int, Literal["*"]],
    Param[None, str, Literal["**"]],
], bool]
reveal_type(f)  # N: Revealed type is "def (a: builtins.int, *builtins.int, **builtins.str) -> builtins.bool"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testNewCallableComplex]
from typing import Callable, Param, Params, Literal

# Complex callable matching PEP example
f: Callable[Params[
    Param[Literal["a"], int, Literal["positional"]],
    Param[Literal["b"], int],
    Param[Literal["c"], int, Literal["default"]],
    Param[None, int, Literal["*"]],
    Param[Literal["d"], int, Literal["keyword"]],
    Param[Literal["e"], int, Literal["default", "keyword"]],
    Param[None, int, Literal["**"]],
], int]
reveal_type(f)  # N: Revealed type is "def (a: builtins.int, b: builtins.int, c: builtins.int =, *builtins.int, d: builtins.int, e: builtins.int =, **builtins.int) -> builtins.int"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testNewCallableAssignment]
from typing import Callable, Param, Params, Literal

def real_func(a: int, b: str) -> bool:
    return True

f: Callable[Params[Param[Literal["a"], int], Param[Literal["b"], str]], bool]
f = real_func  # OK

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testGetArgCallableBasic]
from typing import Callable, Param, Params, GetArg, Literal

# GetArg[Callable, Callable, 0] returns tuple of Params
a0: GetArg[Callable[[int, str], bool], Callable, Literal[0]]
reveal_type(a0)  # N: Revealed type is "tuple[typing.Param[None, builtins.int, Never], typing.Param[None, builtins.str, Never]]"

# GetArg[Callable, Callable, 1] returns return type
a1: GetArg[Callable[[int, str], bool], Callable, Literal[1]]
reveal_type(a1)  # N: Revealed type is "builtins.bool"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testGetArgCallableWithNames]
from typing import Callable, Param, Params, GetArg, Literal

# Extended callable with named params roundtrips through GetArg
F = Callable[Params[
    Param[Literal["x"], int],
    Param[Literal["y"], str, Literal["keyword"]],
], bool]
a0: GetArg[F, Callable, Literal[0]]
reveal_type(a0)  # N: Revealed type is "tuple[typing.Param[Literal['x'], builtins.int, Never], typing.Param[Literal['y'], builtins.str, Literal['keyword']]]"

a1: GetArg[F, Callable, Literal[1]]
reveal_type(a1)  # N: Revealed type is "builtins.bool"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testParamDotNotation]
from typing import Param, Literal

# Dot notation on subscripted Param
n: Param[Literal["x"], int, Literal["keyword"]].name
reveal_type(n)  # N: Revealed type is "Literal['x']"

t: Param[Literal["x"], int, Literal["keyword"]].type
reveal_type(t)  # N: Revealed type is "builtins.int"

q: Param[Literal["x"], int, Literal["keyword"]].quals
reveal_type(q)  # N: Revealed type is "Literal['keyword']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testParamGetMemberType]
from typing import Param, GetMemberType, Literal

a: GetMemberType[Param[Literal["x"], int, Literal["keyword"]], Literal["name"]]
reveal_type(a)  # N: Revealed type is "Literal['x']"

b: GetMemberType[Param[Literal["x"], int, Literal["keyword"]], Literal["type"]]
reveal_type(b)  # N: Revealed type is "builtins.int"

c: GetMemberType[Param[Literal["x"], int, Literal["keyword"]], Literal["quals"]]
reveal_type(c)  # N: Revealed type is "Literal['keyword']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testRecursiveConditionalAliasWithTypeVars]
# flags: --python-version 3.14
# Regression test: recursive conditional type alias with TypeVars
# in a function return type must not hang when formatting error messages.
# The bug was that _expand_type_fors_in_args would infinitely expand
# recursive aliases inside UnpackType when the expansion was stuck
# on TypeVars.
from typing import Literal, Bool, IsAssignable, Slice, GetArg, Length, RaiseError, assert_type

type DropLast[T] = Slice[T, Literal[0], Literal[-1]]
type Last[T] = GetArg[T, tuple, Literal[-1]]
type Empty[T] = IsAssignable[Length[T], Literal[0]]

type Zip[T, S] = (
    tuple[()]
    if Bool[Empty[T]] and Bool[Empty[S]]
    else RaiseError[Literal["Zip length mismatch"], T, S]
    if Bool[Empty[T]] or Bool[Empty[S]]
    else tuple[*Zip[DropLast[T], DropLast[S]], tuple[Last[T], Last[S]]]
)

def pair_zip[T, U](a: T, b: U) -> Zip[T, U]:
    return tuple(zip(a, b))  # type: ignore

# Concrete usage should work
result = pair_zip((1, "hello"), (3.14, True))
assert_type(result, tuple[tuple[int, float], tuple[str, bool]])

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testRecursiveConditionalAliasWithTypeVarTuples]
# flags: --python-version 3.14
# Regression test: same as above but with TypeVarTuples (*Ts, *Us).
# RaiseError inside the Zip body must not fire during error formatting
# when get_proper_type evaluates it standalone outside its _Cond context.
from typing import Literal, Bool, IsAssignable, Slice, GetArg, Length, RaiseError, assert_type

type DropLast[T] = Slice[T, Literal[0], Literal[-1]]
type Last[T] = GetArg[T, tuple, Literal[-1]]
type Empty[T] = IsAssignable[Length[T], Literal[0]]

type Zip[T, S] = (
    tuple[()]
    if Bool[Empty[T]] and Bool[Empty[S]]
    else RaiseError[Literal["Zip length mismatch"], T, S]
    if Bool[Empty[T]] or Bool[Empty[S]]
    else tuple[*Zip[DropLast[T], DropLast[S]], tuple[Last[T], Last[S]]]
)

def pair_zip[*Ts, *Us](
    a: tuple[*Ts], b: tuple[*Us]
) -> Zip[tuple[*Ts], tuple[*Us]]:
    return tuple(zip(a, b))  # type: ignore

result = pair_zip((1, "hello"), (3.14, True))
assert_type(result, tuple[tuple[int, float], tuple[str, bool]])

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]
